--- a/account-service-prod.yml
+++ b/account-service-prod.yml
@@ -1,7 +1,7 @@
 build:
   version: "1.0"
 account:
-  message: "Welcome to Eazybank account related to Prod API."
+  message: "Welcome to Eazybank account related to production API."
   contactDetails:
     name: "John Doe - Product Own"
     email: "JohnDoe@gmail.com"
